feat: add post new trip api
