# internal/api/handlers/handlers.go
@@ -27,8 +27,9 @@ func AttachAllRoutes(s *api.Server) {
 		common.GetVersionRoute(s),
 		push.GetPushTestRoute(s),
 		push.PostUpdatePushTokenRoute(s),
-		trips.GetRandomBeerRoute(s),
+		trips.GetRandomTripRoute(s),
 		trips.GetTripRoute(s),
 		trips.GetTripsRoute(s),
+		trips.PostTripRoute(s),
 	}
 }
