# internal/types/trips/post_trip_route_parameters.go
@@ -1,0 +1,95 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package trips
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+
+	"github.com/danielmoisa/trip-planner/internal/types"
+)
+
+// NewPostTripRouteParams creates a new PostTripRouteParams object
+// no default values defined in spec.
+func NewPostTripRouteParams() PostTripRouteParams {
+
+	return PostTripRouteParams{}
+}
+
+// PostTripRouteParams contains all the bound params for the post trip route operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters PostTripRoute
+type PostTripRouteParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  Required: true
+	  In: body
+	*/
+	Payload *types.PostTripPayload
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewPostTripRouteParams() beforehand.
+func (o *PostTripRouteParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body types.PostTripPayload
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("payload", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("payload", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Payload = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("payload", "body", ""))
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *PostTripRouteParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// Payload
+	// Required: true
+
+	// body is validated in endpoint
+	//if err := o.Payload.Validate(formats); err != nil {
+	//  res = append(res, err)
+	//}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
